paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_005/target.compile.log
error[E0506]: cannot assign to `backing[_]` because it is borrowed
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_005/target.rs:48:9
   |
48 |         backing[i] = (100 + i) as f32;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `backing[_]` is assigned to here but it was already borrowed
49 |         afp.push(&backing[i]);
   |         ---      ----------- `backing[_]` is borrowed here
   |         |
   |         borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.